--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,3 +19,13 @@ h1 {
     padding-right: 10%;
 }
 
+h3 {
+    border-top-left-radius: 10% ;
+    border-top-right-radius: 10%;
+    border-bottom-right-radius: 10%;
+    border-bottom-left-radius: 10%;
+    background-color: #4D6D63 ;
+    font-family: 'Roboto', sans-serif;
+    color: #EEEAE6;
+}
+
