--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,9 @@
 body { 
         background-color: #18171A;
-        display: flex;
         justify-content: center;
         padding-top: 20px;
+        margin-left: 30%;
+        margin-right: 30%;
 }
 
 h1 {
@@ -13,19 +14,34 @@ h1 {
     border-left: inset 10px transparent;
     border-bottom: inset 10px  #4D6D63 ;
     border-right: outset 10px  transparent;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 10%;
-    padding-right: 10%;
+    display: flex;
+    justify-content: center;
 }
+
 
 h3 {
-    border-top-left-radius: 10% ;
-    border-top-right-radius: 10%;
-    border-bottom-right-radius: 10%;
-    border-bottom-left-radius: 10%;
-    background-color: #4D6D63 ;
+    background-color: #2B3D37;
+    border-top-left-radius: 2px ;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+    border-bottom-left-radius: 2px;
     font-family: 'Roboto', sans-serif;
+    font-size: smaller;
     color: #EEEAE6;
+    width: 21%;
 }
 
+input:focus {
+                background-color: #4D6D63;
+                text-align:end;
+}
+
+div { 
+                color:#839692 ;
+                background-color: #839692;
+                font-family: 'Roboto', sans-serif;
+                color: black;
+                padding-left: 30%;
+                border: solid 1px #56796E;
+                border-radius: 2px;
+}
