--- a/css/estilos.css
+++ b/css/estilos.css
@@ -66,3 +66,31 @@ div {
     background-color: #b0c4c4;
     border-radius: 50%;
 }
+
+
+h5 {
+        color: white;
+}
+
+
+button  {
+            /* background-color: #2B3D37;
+            border-top-left-radius: 4px ;
+            border-top-right-radius: 4px;
+            border-bottom-right-radius: 4px;
+            border-bottom-left-radius: 4px;
+            font-family: 'Roboto', sans-serif;
+            font-size:small;
+            padding: 10px;
+            color: #EEEAE6; */
+
+            background-color: #2d3f37; /* Color de fondo */
+            color: #c8d6c7; /* Color del texto */
+            border: none; /* Sin borde */
+            padding: 10px 20px; /* Espaciado interno */
+            font-size: 16px; /* Tamaño del texto */
+            cursor: pointer; /* Cursor tipo botón */
+            border-radius: 5px; /* Bordes redondeados */
+            
+            
+}
