--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,30 +19,38 @@ h1 {
 }
 
 
+
+fieldset {
+            border: none;
+            
+}
+
+
 legend {
-    background-color: #4D6D63;
-    border-top-left-radius: 2px ;
-    border-top-right-radius: 2px;
-    border-bottom-right-radius: 2px;
-    border-bottom-left-radius: 2px;
-    font-family: 'Roboto', sans-serif;
-    font-size: smaller;
-    color: #EEEAE6;
-    height: 2em;
-    padding-top: 10px;
+            background-color: #4D6D63;
+            border-top-left-radius: 2px ;
+            border-top-right-radius: 2px;
+            border-bottom-right-radius: 2px;
+            border-bottom-left-radius: 2px;
+            font-family: 'Roboto', sans-serif;
+            font-size: smaller;
+            color: #EEEAE6;
+            height: 2em;
+            padding-top: 10px;
+            
 }
 
 
 input:focus {
                 background-color: #4D6D63;
-                text-align:end;
+                text-align: end;
 }
 
 
 
 div {  
     color:#839692 ;
-    background-color: #839692;
+    background-color: #D6E2DE;
     font-family: 'Roboto', sans-serif;
     color: black;
     padding-left: 30%;
@@ -68,29 +76,24 @@ div {
 }
 
 
+.boton {
+
+        color: white;
+}
+
+
 h5 {
         color: white;
 }
 
 
-button  {
-            /* background-color: #2B3D37;
-            border-top-left-radius: 4px ;
-            border-top-right-radius: 4px;
-            border-bottom-right-radius: 4px;
-            border-bottom-left-radius: 4px;
+footer {
+            border: none;
+            border-radius: 5px;
             font-family: 'Roboto', sans-serif;
             font-size:small;
             padding: 10px;
-            color: #EEEAE6; */
-
-            background-color: #2d3f37; /* Color de fondo */
-            color: #c8d6c7; /* Color del texto */
-            border: none; /* Sin borde */
-            padding: 10px 20px; /* Espaciado interno */
-            font-size: 16px; /* Tamaño del texto */
-            cursor: pointer; /* Cursor tipo botón */
-            border-radius: 5px; /* Bordes redondeados */
-            
+            cursor: pointer;
             
 }
+
