--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,22 @@
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    appearance: initial;
+    -moz-appearance: textfield;
+}
+
 body { 
-        background-color: #18171A;
-        justify-content: center;
-        padding-top: 20px;
-        margin-left: 30%;
-        margin-right: 30%;
+    background-color: #18171A;
+    padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1 {
@@ -18,82 +31,148 @@ h1 {
     justify-content: center;
 }
 
-
-
-fieldset {
-            border: none;
-            
+form {
+    position: relative;
+    width: 50%;
+    min-width: 450px;
 }
 
-
-legend {
-            background-color: #4D6D63;
-            border-top-left-radius: 2px ;
-            border-top-right-radius: 2px;
-            border-bottom-right-radius: 2px;
-            border-bottom-left-radius: 2px;
-            font-family: 'Roboto', sans-serif;
-            font-size: smaller;
-            color: #EEEAE6;
-            height: 2em;
-            padding-top: 10px;
-            
-}
-
-
-input:focus {
-                background-color: #4D6D63;
-                text-align: end;
-}
-
-
-
-div {  
+.info {  
     color:#839692 ;
     background-color: #D6E2DE;
     font-family: 'Roboto', sans-serif;
     color: black;
-    padding-left: 30%;
     border: solid 1px #56796E;
     border-radius: 2px;
     padding-bottom: 5%;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .dot-container {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    list-style: none;
-    padding-top: 3%;
+    text-align: center;
+    margin: 15px 0;
 }
 
-.dot-container li {
-    width: 15px;
-    height: 15px;
-    background-color: #b0c4c4;
+.dot {
+    width: 18px;
+    height: 18px;
+    background-color: #A6C1B9;
     border-radius: 50%;
+    display: inline-block;
+    margin: 10px 5px 0;
 }
 
-
-.boton {
-
-        color: white;
+legend {
+    background-color: #4D6D63;
+    border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
+    font-size: smaller;
+    color: #EEEAE6;
+    height: 2em;
+    width: fit-content;
+    padding: 10px 5px 0 5px;
+    position: relative;
+    top: 0px;
+    left: 15px;
 }
 
+.selected-info {
+    background-color: #A6C1B9 !important;
+}
+
+.selected-legend {
+    background-color: #2B3D37;
+}
+
+fieldset {
+    border: none;      
+    padding: 0;
+}
+
+.info p {
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+
+.inputs {
+    width: 50%;
+    height: 25px;
+    border: 2px solid #4D6D63;
+    border-radius: 5px;
+    max-width: 50%;
+    min-width: 50%;
+    text-align: end;
+}
+
+select.inputs{
+    width: 49%; 
+    height: 25px;
+    border: 2px solid #4D6D63;
+    border-radius: 5px;
+    text-align: start !important;
+}
+
+textarea.inputs {
+    min-height: 100px;
+    height: 100px;
+}
+
+textarea:focus, input:focus {
+    color: white;
+    background-color: #4D6D63;
+}
+
+.sedes {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start !important;
+    padding: 20px 5px;
+}
+
+#actividades {
+    color: black;
+    font-size: small;
+    padding-top: 10px;
+    font-family: 'Roboto', sans-serif
+}
+
+.terminos {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    margin-top: 25px;
+}
 
 h5 {
-        color: white;
+    color: white;
 }
 
-
-footer {
-            border: none;
-            border-radius: 5px;
-            font-family: 'Roboto', sans-serif;
-            font-size:small;
-            padding: 10px;
-            cursor: pointer;
-            
+.botones {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 25px;
 }
 
+.btn {
+    border: 1px solid #A6C1B9;
+    border-radius: 5px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: lighter;
+    font-size: small;
+    padding: 10px;
+    cursor: pointer;
+    width: fit-content;
+    height: 45px;
+    padding: 0 20px;
+    margin: 0 15px;
+    background-color: #2B3D37 ;
+    color: white;
+    opacity: 75%;
+}
+
+.btn:hover {
+    border: 1px solid #2B3D37;
+    background-color: #A6C1B9 ;
+}
